vpc/advanced/modulo-02-seguranca-avancada/2.1-acls-e-security-groups-avancados/main.tf
resource "aws_network_acl" "advanced_acl" {
  vpc_id = aws_vpc.custom_vpc.id

  ingress {
    protocol   = "tcp"
    rule_no    = 100
    action     = "allow"
    cidr_block = "10.0.0.0/16"
    from_port  = 80
    to_port    = 80
  }

  egress {
    protocol   = "-1"
    rule_no    = 100
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 0
  }
}

resource "aws_security_group" "advanced_sg" {
  name        = "advanced_sg"
  description = "Advanced Security Group"
  vpc_id      = aws_vpc.custom_vpc.id

  ingress {
    description = "Allow HTTP from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = [aws_vpc.custom_vpc.cidr_block]
  }
}
